[package]
name = "qsrv"
description = "Quick and dirty HTTP server for fast development"
authors = ["William Drescher <wilkua2@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
eyre = "0.6.8"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
mio = { version = "0.8.5", features = ["os-poll", "net"] }
time = { version = "0.3.16", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time"] }
